# projects

./: .gitignore  README.md  pyproject.toml
src/: app.py  inference.py  tmp.ipynb  update_metrics.py
src/config/: base_config.py  hyperparameter_config.py
src/datasets/custom_datasets/: spacenet_dataset.py
src/datasets/preprocessing/: spacenet_multichannel_mask.py  spacenet_singlechannel_mask.py
src/models/: get_model.py
src/static/css/: style.css
src/static/js/: charts.js  comparison.js  hyperparameter_charts.js  model_comparison_charts.js
src/templates/: hyperparameter_tuning.html  index.html  model_comparison.html  unet_experiments.html
src/training/: metrics.py  run_experiment.py  tmp.py  train.py  train_hyperparameters.py  train_utils.py
src/utils/: utils.py
